0.9.0/_sources/generated/statsmodels.discrete.count_model.ZeroInflatedNegativeBinomialP.rst.txt
statsmodels.discrete.count_model.ZeroInflatedNegativeBinomialP
==============================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: ZeroInflatedNegativeBinomialP

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~ZeroInflatedNegativeBinomialP.cdf
    
    
      ~ZeroInflatedNegativeBinomialP.cov_params_func_l1
    
    
      ~ZeroInflatedNegativeBinomialP.fit
    
    
      ~ZeroInflatedNegativeBinomialP.fit_regularized
    
    
      ~ZeroInflatedNegativeBinomialP.from_formula
    
    
      ~ZeroInflatedNegativeBinomialP.hessian
    
    
      ~ZeroInflatedNegativeBinomialP.information
    
    
      ~ZeroInflatedNegativeBinomialP.initialize
    
    
      ~ZeroInflatedNegativeBinomialP.loglike
    
    
      ~ZeroInflatedNegativeBinomialP.loglikeobs
    
    
      ~ZeroInflatedNegativeBinomialP.pdf
    
    
      ~ZeroInflatedNegativeBinomialP.predict
    
    
      ~ZeroInflatedNegativeBinomialP.score
    
    
      ~ZeroInflatedNegativeBinomialP.score_obs
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~ZeroInflatedNegativeBinomialP.endog_names
      ~ZeroInflatedNegativeBinomialP.exog_names
   
   