v0.10.0/_sources/generated/statsmodels.discrete.count_model.ZeroInflatedNegativeBinomialP.rst.txt
statsmodels.discrete.count\_model.ZeroInflatedNegativeBinomialP
===============================================================

.. currentmodule:: statsmodels.discrete.count_model

.. autoclass:: ZeroInflatedNegativeBinomialP

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         ZeroInflatedNegativeBinomialP.cdf
         ZeroInflatedNegativeBinomialP.cov_params_func_l1
         ZeroInflatedNegativeBinomialP.fit
         ZeroInflatedNegativeBinomialP.fit_regularized
         ZeroInflatedNegativeBinomialP.from_formula
         ZeroInflatedNegativeBinomialP.hessian
         ZeroInflatedNegativeBinomialP.information
         ZeroInflatedNegativeBinomialP.initialize
         ZeroInflatedNegativeBinomialP.loglike
         ZeroInflatedNegativeBinomialP.loglikeobs
         ZeroInflatedNegativeBinomialP.pdf
         ZeroInflatedNegativeBinomialP.predict
         ZeroInflatedNegativeBinomialP.score
         ZeroInflatedNegativeBinomialP.score_obs



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         ZeroInflatedNegativeBinomialP.endog_names
         ZeroInflatedNegativeBinomialP.exog_names

